<?xml version="1.0"?>
<package format="3">

  <name>example_plugin_manager</name>
  <version>1.0.0</version>
  <description>The example_plugin_manager package</description>

  <author email="afzalhmd14@gmail.com">Afzal Ahmad</author>
  <maintainer email="afzalhmd14@gmail.com">Afzal Ahmad</maintainer>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>pluginlib </depend>
  <depend>ros2_examples</depend>
  <depend>eigen</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
