<?xml version="1.0"?>
<package format="2">

  <name>example_plugins</name>
  <version>1.0.0</version>
  <description>The example_plugins package</description>

  <author email="tomas.baca@fel.cvut.cz">Tomas Baca</author>
  <maintainer email="tomas.baca@fel.cvut.cz">Tomas Baca</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>cmake_modules</depend>
  <depend>mrs_lib</depend>
  <depend>example_plugin_manager</depend>

  <export>
    <example_plugin_manager plugin="${prefix}/plugins.xml" />
  </export>

</package>
