<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">

  <name>vision_examples</name>

  <version>1.0.0</version>
  <description>MRS ROS2 vision example</description>

  <author email="afzalhmd14@gmail.com">Afzal Ahmad</author>
  <maintainer email="tomas.baca@fel.cvut.cz">klaxalk</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>libopencv-dev</depend>

  <exec_depend>vision_examples_utils</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>